--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <hr>
         <h2 id="notice">Choose a number from 1 - 10</h2>
         <input type="text" id="in" maxlength="2"><br><br>
-        <button id="enter">SUBMIT</button><br>
+        <button id="enter">SUBMIT</button><br><br>
         <label id="lives">❤3</label><br><br>
         
         <label id="prompt"></label><br><br>
